# pfs_obslog

./: .gitignore  .gitmodules  Makefile  README.ja.MD  README.md  conftest.py  deploy.bash  opdb.session.sql  pytest.ini  setup.py  start.bash  update-production.bash
backend/: .env  .gitignore  Makefile  README.ja.MD  README.md  conftest.py  entrypoint.bash  opdb@production.session.sql  pyproject.toml  pyrightconfig.json  pytest.ini  runner  setup.py
backend/devel/: generate_models.md  generate_models.py
backend/devel/make_test_db/: main.py  migrate_data.py  pyproject.toml  run.sh  setup_test_db.sh
backend/devel/make_test_qadb/: README.md  migrate_qadb.py  pyproject.toml  run.sh  setup_qadb.sh
backend/docs/: session.md
backend/healthcheck/: helthcheck.py
backend/schemaspy/: run.bash  schemaspy.properties
backend/scripts/: entrypoint.bash  pfs-obslog2.service
backend/secrets/: pfs_obslog_dsn  pfs_obslog_dsn.production  pfs_obslog_secret_key_base
backend/src/pfs_obslog/: config.py  crypto.py  database.py  db.py  fitsmeta.py  httpsession.py  image.py  logging.py  main.py  models.py  module.py  orjsonresponse.py  orm.py  pfs_design_cache.py  qadb.py  schema.py  staticassets.py  userauth.py  userauth_secret.py  visitquery.py
backend/src/pfs_obslog/app/: context.py  debug.py  fastapi_app.py  orjsonresponse.py  staticassets.py
backend/src/pfs_obslog/auth/: __init__.py  ldap_auth.py  middleware.py  session.py
backend/src/pfs_obslog/filecache/: __init__.py  clear.py
backend/src/pfs_obslog/parsesql/: ast.py
backend/src/pfs_obslog/routers/: __init__.py  attachments.py  auth.py  fits.py  health.py  notes.py  pfs_designs.py  plot.py  visits.py
backend/src/pfs_obslog/schemas/: __init__.py  visits.py
backend/src/pfs_obslog/utils/: metafits.py  symbol.py  timeit.py
backend/src/pfs_obslog/visitquery/: __init__.py  columns.py  evaluator.py  joins.py  parser.py
backend/systemd/: .gitignore  pfs-obslog.root.service.template  pfs-obslog.user.service.template
backend/tests/: conftest.py  test_attachments.py  test_auth.py  test_evaluator_integration.py  test_fits.py  test_ldap_auth.py  test_module.py  test_notes.py  test_pfs_design_cache.py  test_pfs_designs.py  test_plot.py  test_visitquery.py  test_visits.py
backend/tests/db/: setup.py
backend/tests/pfs_obslog/: test_app.py  test_crypto.py  test_db.py  test_filecache.py  test_httpsession.py  test_image.py  test_logging.py  test_parsesql.py  test_userauth_secret.py  test_visitquery.py
copilot/: LoadingSpinner.md  (+18 more)
(+642 files in other folders)
