[project]
name = "pfs-obslog"
version = "0.1.0"
description = "PFS Observation Log System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.0",
    "ldap3>=2.9.0",
    "itsdangerous>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.0",
    "sqlacodegen>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pfs_obslog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=pfs_obslog --cov-report=term-missing"

[tool.pytest_env]
# 環境変数を設定する場合はここに追加
# DATABASE_URL = "postgresql://pfs@localhost:15432/opdb"

[tool.uv]
package = true
