[project]
name = "pfs-obslog"
version = "0.1.0"
description = "PFS Observation Log System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.34.0",
    "ldap3>=2.9.0",
    "itsdangerous>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pglast>=7.11",
    "orjson>=3.10.0",
    "astropy>=6.0.0",
    "scikit-image>=0.24.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.20",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    # pfs.datamodel and pfs.utils dependencies (installed separately from external/)
    "pandas>=2.0.0",
    "pytz>=2024.0",
    "scipy>=1.14.0",
    "astroplan>=0.10.0",
    "lsst-utils>=29.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.1.0",
    "pytest-timeout>=2.3.0",
    "sqlacodegen>=3.0.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pfs_obslog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=pfs_obslog --cov-report=term-missing"
timeout = 1  # デフォルト1秒タイムアウト
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pytest_env]
# 環境変数を設定する場合はここに追加
# DATABASE_URL = "postgresql://pfs@localhost:15432/opdb"

[tool.uv]
package = true
